--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ langchain>=0.0.267
 langchain-community>=0.0.16
 neo4j>=5.14.0
 pymupdf>=1.23.7
-mistralai>=1.0.0
+fireworks-ai>=0.11.0
 pandas>=2.0.0
 matplotlib>=3.7.0
 plotly>=5.18.0
